src/org/openscience/cdk/smiles/smarts/parser/SMARTSParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. SMARTSParser.java */
/* $RCSfile$
 * $Author: $
 * $Date: $
 * $Revision: $
 *
 * Copyright (C) 2004-2007  The Chemistry Development Kit (CDK) project
 *
 * This library is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Lesser General Public
 * License as published by the Free Software Foundation; either
 * version 2.1 of the License, or (at your option) any later version.
 *
 * This library is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 * Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public
 * License along with this library; if not, write to the Free Software
 * Foundation, 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
 * (or see http://www.gnu.org/copyleft/lesser.html)
 */

package org.openscience.cdk.smiles.smarts.parser;

import java.io.StringReader;
import java.util.Stack;

import org.openscience.cdk.exception.CDKException;
import org.openscience.cdk.isomorphism.matchers.QueryAtomContainer;
import org.openscience.cdk.tools.LoggingTool;

/**
 * This parser implements a nearly complete subset of the SMARTS syntax as defined on
 * <a href="http://www.daylight.com/dayhtml/doc/theory/theory.smarts.html">the
 * Daylight website</a>. 
 *
 * <p>Example code using SMARTS substructure search looks like:
 * <pre>
 * SmilesParser sp = new SmilesParser();
 * AtomContainer atomContainer = sp.parseSmiles("CC(=O)OC(=O)C");
 * QueryAtomContainer query = SMARTSParser.parse("C*C");
 * boolean queryMatch = UniversalIsomorphismTester.isSubgraph(atomContainer, query);
 * </pre>
 *
 * <p>See the cdk.test.smiles.smarts.parser.ParserTest for examples of the implemented
 * subset.
 *
 * This parser is based on JJTree and it generates an AST (Abstract Syntax Tree)
 * <p>To get the AST, the code looks like:
 * <pre>
 * SMARTSParser parser = new SMARTSParser(new java.io.StringReader("C*C"));
 * ASTStart = parser.start();
 * </pre>
 *
 * @see org.openscience.cdk.isomorphism.matchers.smarts.SMARTSAtom
 *
 * @author      Dazhi Jiao
 * @cdk.created 2007-04-23
 * @cdk.svnrev $Revision: $
 *
 * @cdk.require ant1.6
 * @cdk.module  smarts
 *
 * @cdk.keyword SMARTS
 * @cdk.keyword substructure search
 */
public class SMARTSParser/*@bgen(jjtree)*/implements SMARTSParserTreeConstants, SMARTSParserConstants {/*@bgen(jjtree)*/
  protected JJTSMARTSParserState jjtree = new JJTSMARTSParserState();
        /**
	 * This method parses a Smarts String and returns an instance of 
	 * <code>QueryAtomContainer</code>
	 */
        public static QueryAtomContainer parse(String smarts) throws CDKException {
        QueryAtomContainer container = null;
        StringReader reader = new StringReader(smarts);
        try {
            SMARTSParser parser = new SMARTSParser(reader);
            ASTStart start = parser.Start();
            org.openscience.cdk.smiles.smarts.parser.visitor.SmartsQueryVisitor visitor
                = new org.openscience.cdk.smiles.smarts.parser.visitor.SmartsQueryVisitor();
            container = (QueryAtomContainer)start.jjtAccept(visitor, null);
        } catch (ParseException exception) {
            throw new CDKException("The string " + smarts + " is not a valid" +
              " SMARTS string: " + exception.getMessage(), exception);
        }
        return container;
        }

/**
 *                     Start ::= <ReactionExpression>
 *        ReactionExpression ::= <GroupExpression> (">>" <GroupExpression>)? |
 *                               ">" <GroupExpression> ">" | ">>" <GroupExpression>
 *           GroupExpression ::= ["("] <SmartsExpresion> [")"] ( "." ["("] <SmartsExpression> [")"] )*
 *          SmartsExpression ::= <AtomExpression> ( 
 									( [ <LowAndBond> ] ( <Digit> | <AtomExpression> ) ) |
 									( "(" [ <LowAndBond> ] <SmartsExpression> ")" ) )*
 		      AtomExpression ::= ( "[" [ <AtomicMass> ] <LowAndExpression> "]" ) | <ExplicitAtomExpression>
 *                LowAndBond ::= <OrBond> [ ";" <AndBond> ]
 *                    OrBond ::= <ExplicitHighAndBond> [ "," <OrBond> ]
 *       ExplicitHighAndBond ::= <ImplicitHighAndBond> [ "&" <ExplicitHighAndBond> ]
 *       ImplicitHighAndBond ::= <NotBond> [ <ImplicitHighAndBond> ]
 *                   NotBond ::= [ "!" ] <SimpleBond>
 *                SimpleBond ::= "/" | "\\" | "/?" | "\\?" | "=" | "#" | "~" | "@"
 *    ExplicitAtomExpression ::= [ "B" | "C" | "N" | "O" | "P" | "S" | "F" | "CL" | "BR" | "I" 
 *                               | "c" | "o" | "n" | "*" | "A" | "a" | "p" | "as" | "se" ] 
 *          LowAndExpression ::= <OrExpression> ( ";" <LowAndExpression> )?
 *              OrExpression ::= <ExplicitHighAndExpression> ( "," <OrExpression> ) ?
 * ExplicitHighAndExpression ::= <ImplicitHighAndExpression> ( "&" <ExplicitHighAndExpression> )?
 * ImplicitHighAndExpression ::= <NotExpression> ( <ImplicitHighAndExpression> ) ?
 *             NotExpression ::= "!" ( <PrimitiveAtomExpression> | <RecursiveSmartsExpression> )
 * RecursiveSmartsExpression ::= "$" "(" <SmartsExpression> ")"
 *   PrimitiveAtomExpression ::= <NonHydrogenElement> | "*" | "A" | "a" | "D" (<Digits>)? | "H" (<Digits>)? | "h" (<Digits>)?
 *                               | "R" (<Digit>+)? | "r" (<Digit>+)? | "v" (<Digit>+)? | "X" (<Digit>+)? | "x" (<Digit>+)? 
 *                               | ("+" | "-") (<Digit>+)? | "#" (<Digit>+)? | "@" | "@@" | <Digit>+
 *                     Digit ::= ( "0" - "9")
 *        NonHydrogenElement ::= [ "HE" | "LI" | "BE" | "NE" | "NA" | "MG" | "AL" | "SI" | "AR" | "CA" | "SC" |
 *                               "TI" | "CR" | "MN" | "FE" | "CO" | "NI" | "CU" | "ZN" | "GA" | "GE" | "AS" |
 *                               "SE" | "BR" | "KR" | "RB" | "SR" | "ZR" | "NB" | "MO" | "TC" | "RU" | "RH" |
 *                               "PD" | "AG" | "CD" | "IN" | "SN" | "SB" | "TE" | "XE" | "CS" | "BA" | "LA" |
 *                               "HF" | "TA" | "RE" | "OS" | "IR" | "PT" | "AU" | "HG" | "TL" | "PB" | "BI" |
 *                               "PO" | "AT" | "RN" | "FR" | "RA" | "AC" | "TH" | "PA" |
 *                               "B" | "C" | "N" | "O" | "F" | "P" | "S" | "K" | "V" | "Y" | "I" | "U" |
 *                               "c" | "o" | "n" | "p" | "as" | "se" ]
 */
  final public ASTStart Start() throws ParseException {
                           /*@bgen(jjtree) Start */
  ASTStart jjtn000 = new ASTStart(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      ReactionExpression();
      jj_consume_token(0);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
        {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public void ReactionExpression() throws ParseException {
                                       /*@bgen(jjtree) Reaction */
  ASTReaction jjtn000 = new ASTReaction(JJTREACTION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case c:
      case n:
      case o:
      case s:
      case p:
      case as:
      case se:
      case B:
      case C:
      case N:
      case O:
      case F:
      case P:
      case S:
      case CL:
      case BR:
      case I:
      case WILDCARD:
      case a:
      case A:
      case L_PAREN:
      case L_BRACKET:
        GroupExpression();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 118:
          jj_consume_token(118);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case c:
          case n:
          case o:
          case s:
          case p:
          case as:
          case se:
          case B:
          case C:
          case N:
          case O:
          case F:
          case P:
          case S:
          case CL:
          case BR:
          case I:
          case WILDCARD:
          case a:
          case A:
          case L_PAREN:
          case L_BRACKET:
            GroupExpression();
            break;
          default:
            jj_la1[0] = jj_gen;
            ;
          }
          break;
        default:
          jj_la1[1] = jj_gen;
          ;
        }
        break;
      case 119:
        jj_consume_token(119);
        GroupExpression();
        jj_consume_token(119);
        break;
      case 118:
        jj_consume_token(118);
        GroupExpression();
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void GroupExpression() throws ParseException {
                                 /*@bgen(jjtree) Group */
                                  ASTGroup jjtn000 = new ASTGroup(JJTGROUP);
                                  boolean jjtc000 = true;
                                  jjtree.openNodeScope(jjtn000);ASTSmarts smarts;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case L_PAREN:
        jj_consume_token(L_PAREN);
        break;
      default:
        jj_la1[3] = jj_gen;
        ;
      }
      SmartsExpression();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case R_PAREN:
        jj_consume_token(R_PAREN);
        break;
      default:
        jj_la1[4] = jj_gen;
        ;
      }
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 120:
          ;
          break;
        default:
          jj_la1[5] = jj_gen;
          break label_1;
        }
        jj_consume_token(120);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case L_PAREN:
          jj_consume_token(L_PAREN);
          break;
        default:
          jj_la1[6] = jj_gen;
          ;
        }
        SmartsExpression();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case R_PAREN:
          jj_consume_token(R_PAREN);
          break;
        default:
          jj_la1[7] = jj_gen;
          ;
        }
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void SmartsExpression() throws ParseException {
 /*@bgen(jjtree) Smarts */
        ASTSmarts jjtn000 = new ASTSmarts(JJTSMARTS);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);ASTAtom atom;
    try {
      atom = AtomExpression();
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NOT:
        case S_BOND:
        case UP_S_BOND:
        case DN_S_BOND:
        case UP_OR_UNSPECIFIED_S_BOND:
        case DN_OR_UNSPECIFIED_S_BOND:
        case D_BOND:
        case T_BOND:
        case AR_BOND:
        case ANY_BOND:
        case R_BOND:
        case c:
        case n:
        case o:
        case s:
        case p:
        case as:
        case se:
        case B:
        case C:
        case N:
        case O:
        case F:
        case P:
        case S:
        case CL:
        case BR:
        case I:
        case WILDCARD:
        case a:
        case A:
        case L_PAREN:
        case L_BRACKET:
        case DIGIT:
          ;
          break;
        default:
          jj_la1[8] = jj_gen;
          break label_2;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NOT:
        case S_BOND:
        case UP_S_BOND:
        case DN_S_BOND:
        case UP_OR_UNSPECIFIED_S_BOND:
        case DN_OR_UNSPECIFIED_S_BOND:
        case D_BOND:
        case T_BOND:
        case AR_BOND:
        case ANY_BOND:
        case R_BOND:
        case c:
        case n:
        case o:
        case s:
        case p:
        case as:
        case se:
        case B:
        case C:
        case N:
        case O:
        case F:
        case P:
        case S:
        case CL:
        case BR:
        case I:
        case WILDCARD:
        case a:
        case A:
        case L_BRACKET:
        case DIGIT:
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case NOT:
          case S_BOND:
          case UP_S_BOND:
          case DN_S_BOND:
          case UP_OR_UNSPECIFIED_S_BOND:
          case DN_OR_UNSPECIFIED_S_BOND:
          case D_BOND:
          case T_BOND:
          case AR_BOND:
          case ANY_BOND:
          case R_BOND:
            LowAndBond();
            break;
          default:
            jj_la1[9] = jj_gen;
            ;
          }
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case DIGIT:
            jj_consume_token(DIGIT);
                                ASTLowAndBond bond = null;
                                ASTRingIdentifier ringId = new ASTRingIdentifier(JJTRINGIDENTIFIER);
                                if (jjtree.peekNode() instanceof ASTLowAndBond) {
                                        bond = (ASTLowAndBond)jjtree.popNode(); // pop the bond
                                        ringId.jjtAddChild(bond, 0);
                                }
                                ringId.setRingId(Integer.parseInt(token.image));
                                atom.jjtAddChild(ringId, atom.jjtGetNumChildren());
            break;
          case c:
          case n:
          case o:
          case s:
          case p:
          case as:
          case se:
          case B:
          case C:
          case N:
          case O:
          case F:
          case P:
          case S:
          case CL:
          case BR:
          case I:
          case WILDCARD:
          case a:
          case A:
          case L_BRACKET:
            atom = AtomExpression();
            break;
          default:
            jj_la1[10] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          break;
        case L_PAREN:
          jj_consume_token(L_PAREN);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case NOT:
          case S_BOND:
          case UP_S_BOND:
          case DN_S_BOND:
          case UP_OR_UNSPECIFIED_S_BOND:
          case DN_OR_UNSPECIFIED_S_BOND:
          case D_BOND:
          case T_BOND:
          case AR_BOND:
          case ANY_BOND:
          case R_BOND:
            LowAndBond();
            break;
          default:
            jj_la1[11] = jj_gen;
            ;
          }
          SmartsExpression();
          jj_consume_token(R_PAREN);
          break;
        default:
          jj_la1[12] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
